--- a/sonarqube-scanner-gradle/gradle-multimodule/build.gradle
+++ b/sonarqube-scanner-gradle/gradle-multimodule/build.gradle
@@ -1,6 +1,6 @@
 plugins {
     id "java-library"
-    id "org.sonarqube" version "2.7"
+    id "org.sonarqube" version "3.3"
 }
 
 allprojects {
@@ -14,7 +14,7 @@ allprojects {
 sonarqube {
     properties {
         property "sonar.projectName", "Example of SonarQube Scanner for Gradle - Multimodule"
-        property "sonar.projectKey", "org.sonarqube:gradle-multimodule"
+        property "sonar.projectKey", "ChrisReferenceProjects_sonar-scanning-examples"
     }
 }
 
